noinst_HEADERS = \
        cclass.h \
        cname.h \
        regex.h \
        regex2.h \
        utils.h

EXTRA_DIST = \
        engine.c \
        regcomp.c \
        regerror.c \
        regexec.c \
        regfree.c \
        regex_test.c \
        hs_regex.def \
        test_hs_regex.mak \
        copyright.txt \
        re_format.doc \
        regex.doc \
        hs_regex.html \
        install.bat \
        release.bat
